--- a/style.css
+++ b/style.css
@@ -5,20 +5,65 @@
 }
 
 :root {
-  --main-bg-color: rgb(69, 55, 80);
-  --important-color: rgb(12, 9, 16);
+  --main-bg-color: #58355e;
+  --important-color: #84a98c;
 }
 
 body {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.2em;
   margin: 0;
   padding: 0;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   background-color: var(--main-bg-color);
+  color: white;
+}
+
+a:link {
+  color: white;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #b09398;
 }
 
 header {
   width: 100%;
   height: 30px;
-  background-color: var(--important-color);
+}
+
+nav ul {
+  padding: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+}
+
+h1 {
+  font-family: "Bree Serif", serif;
+  font-size: 4em;
+}
+
+img {
+  border-radius: 50%;
+  border: 5px solid #87bcde;
+  max-width: 100%;
+  width: 80%;
+}
+
+#hero {
+  position: absolute;
+  top: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#hero-text {
+  text-align: center;
 }
