--- a/style.css
+++ b/style.css
@@ -10,41 +10,91 @@
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", serif;
   font-size: 1.2em;
   margin: 0;
   padding: 0;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
   background-color: var(--main-bg-color);
   color: white;
 }
 
-a:link {
-  color: white;
+a {
+  display: block;
+  color: black;
+  background-color: rgb(135, 188, 222);
   text-decoration: none;
+  transform: skewX(-15deg);
+  padding: 3px 10px;
 }
 
-a:visited {
-  color: #b09398;
+a:hover,
+a:focus {
+  display: block;
+  color: rgb(255, 198, 0);
+  cursor: pointer;
+}
+
+a:active {
+  transform: skewX(15deg);
 }
 
 header {
   width: 100%;
-  height: 30px;
+  height: 100px;
+}
+
+.options {
+  font-size: 0.7em;
+  display: block;
+  text-align: center;
+  margin-left: 30px;
+  background: none;
+  color: rgb(189, 186, 186);
+  transform: skewX(-15deg);
+  width: 150px;
+}
+
+nav {
+  width: 90%;
+  padding: 20px;
+  margin: auto;
 }
 
 nav ul {
-  padding: 0;
+  background: rgb(176, 147, 152);
+  border-right: 3px solid rgb(189, 186, 186);
+  box-shadow: -10px 10px 0px rgb(176, 147, 152)
+    /* inset 2px 2px 5px rgba(0, 0, 0, 0.2), inset -2px -2px 5px rgba(0, 0, 0, 0.2) */;
   width: 100%;
+  padding: 0.5em;
   display: flex;
   justify-content: space-around;
+  align-items: center;
   list-style: none;
+  margin: 0;
+}
+
+#pop-up {
+  display: none;
+  position: absolute;
+  width: 80%;
+  height: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(135, 188, 222);
+}
+
+#pop-up:target {
+  display: block;
 }
 
 h1 {
-  font-family: "Bree Serif", serif;
-  font-size: 4em;
+  font-family: "Shadows Into Light", serif;
+  font-size: 140px;
+  font-stretch: condensed;
+  margin: 0;
+  color: rgb(189, 186, 186);
 }
 
 img {
@@ -57,13 +107,21 @@ img {
 #hero {
   position: absolute;
   top: 0;
-  height: 100vh;
+  max-height: 80vh;
+  margin-top: 120px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: -1;
 }
 
 #hero-text {
   text-align: center;
+  height: 200px;
+}
+
+#hero-text p {
+  display: inline-block;
+  padding: 0 20px;
 }
