--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ nav ul {
 h1 {
   font-family: "Shadows Into Light", serif;
   font-size: 140px;
+  line-height: 1.2;
   font-stretch: condensed;
   margin: 0;
   color: rgb(189, 186, 186);
@@ -106,9 +107,8 @@ img {
 
 #hero {
   position: absolute;
-  top: 0;
+  top: 150px;
   max-height: 80vh;
-  margin-top: 120px;
   display: flex;
   flex-direction: column;
   justify-content: center;
