--- a/style.css
+++ b/style.css
@@ -63,10 +63,9 @@ nav {
 nav ul {
   background: rgb(176, 147, 152);
   border-right: 3px solid rgb(189, 186, 186);
-  box-shadow: -10px 10px 0px rgb(176, 147, 152)
-    /* inset 2px 2px 5px rgba(0, 0, 0, 0.2), inset -2px -2px 5px rgba(0, 0, 0, 0.2) */;
+  box-shadow: -10px 10px 0px rgb(176, 147, 152);
   width: 100%;
-  padding: 0.5em;
+  padding: 0.8em 0.8em 0.3em;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -107,8 +106,8 @@ img {
 
 #hero {
   position: absolute;
-  top: 150px;
-  max-height: 80vh;
+  top: 0;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -118,7 +117,6 @@ img {
 
 #hero-text {
   text-align: center;
-  height: 200px;
 }
 
 #hero-text p {
