--- a/style.css
+++ b/style.css
@@ -5,8 +5,12 @@
 }
 
 :root {
-  --main-bg-color: #58355e;
-  --important-color: #84a98c;
+  --purple: #58355e;
+  --blue: #87bcde;
+  --green: #18f2b2;
+  --yellow: #ffc600;
+  --pink: #b09398;
+  --grey: rgb(189, 186, 186);
 }
 
 body {
@@ -14,23 +18,23 @@ body {
   font-size: 1.2em;
   margin: 0;
   padding: 0;
-  background-color: var(--main-bg-color);
-  color: white;
+  background-color: var(--purple);
+  color: var(--grey);
 }
 
 a {
   display: block;
   color: black;
-  background-color: rgb(135, 188, 222);
+  background-color: var(--blue);
   text-decoration: none;
   transform: skewX(-15deg);
-  padding: 3px 10px;
+  padding: 7px 12px;
 }
 
 a:hover,
 a:focus {
   display: block;
-  color: rgb(255, 198, 0);
+  color: var(--yellow);
   cursor: pointer;
 }
 
@@ -49,7 +53,7 @@ header {
   text-align: center;
   margin-left: 30px;
   background: none;
-  color: rgb(189, 186, 186);
+  color: var(--grey);
   transform: skewX(-15deg);
   width: 150px;
 }
@@ -61,9 +65,9 @@ nav {
 }
 
 nav ul {
-  background: rgb(176, 147, 152);
-  border-right: 3px solid rgb(189, 186, 186);
-  box-shadow: -10px 10px 0px rgb(176, 147, 152);
+  background: var(--pink);
+  border-right: 3px solid var(--yellow);
+  box-shadow: -10px 10px 0px var(--pink);
   width: 100%;
   padding: 0.8em 0.8em 0.3em;
   display: flex;
@@ -81,7 +85,7 @@ nav ul {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgb(135, 188, 222);
+  background-color: var(--blue);
 }
 
 #pop-up:target {
@@ -90,36 +94,67 @@ nav ul {
 
 h1 {
   font-family: "Shadows Into Light", serif;
-  font-size: 140px;
+  font-size: 120px;
   line-height: 1.2;
-  font-stretch: condensed;
-  margin: 0;
-  color: rgb(189, 186, 186);
+  margin: 20px;
+  color: black;
+  background-color: var(--green);
+  border-top-right-radius: 0.8em;
+  border-bottom-left-radius: 0.8em;
+  box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.6);
+}
+
+h2 {
+  font-family: "Shadows Into Light", serif;
+  text-transform: uppercase;
+  color: black;
+  padding: 10px 30px;
+  background-color: var(--yellow);
+  width: fit-content;
 }
 
 img {
   border-radius: 50%;
-  border: 5px solid #87bcde;
+  border: 5px solid var(--blue);
   max-width: 100%;
   width: 80%;
 }
 
 #hero {
-  position: absolute;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+.text-container {
+  position: relative;
   top: 0;
-  height: 100vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   z-index: -1;
 }
 
 #hero-text {
-  text-align: center;
+  width: 100%;
 }
 
 #hero-text p {
   display: inline-block;
   padding: 0 20px;
+}
+
+#about {
+  width: 100%;
+  height: 100%;
+}
+
+.title-container {
+  display: flex;
+  justify-content: center;
+}
+
+.about-paragraphs {
+  padding: 20px;
 }
