--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ nav {
 
 nav ul {
   background: var(--pink);
-  border-right: 3px solid var(--yellow);
+  border-right: 3px solid var(--green);
+  border-top: 3px solid var(--yellow);
   box-shadow: -10px 10px 0px var(--pink);
   width: 100%;
   padding: 0.8em 0.8em 0.3em;
@@ -103,6 +104,7 @@ h3 {
 h1 {
   font-size: 120px;
   line-height: 1.2;
+  padding: 50px 0;
   margin: 20px;
   background-color: var(--green);
   border-top-right-radius: 0.8em;
@@ -112,7 +114,7 @@ h1 {
 
 h2 {
   text-transform: uppercase;
-  padding: 10px 30px;
+  padding: 10px 50px;
   background-color: var(--yellow);
   border-top-left-radius: 0.8em;
   border-bottom-right-radius: 0.8em;
@@ -123,6 +125,7 @@ h3 {
   width: 100%;
   background-color: var(--pink);
   text-align: center;
+  font-variant: small-caps;
 }
 
 img {
@@ -131,6 +134,8 @@ img {
   max-width: 100%;
   margin: auto;
   box-shadow: -10px 10px 0px var(--pink);
+  border-right: 5px solid var(--green);
+  border-top: 5px solid var(--yellow);
 }
 
 #hero {
