--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -14,11 +14,13 @@
 
     @media (min-width: 1000px) {
         height: 80px;
+        justify-content: space-between;
+        flex-wrap: nowrap;
     }
 
     &__icon {
-        width: 60px;
-        height: 60px;
+        max-width: 60px;
+        max-height: 50px;
         order: 1;
         
         margin-block: 1rem;
@@ -26,6 +28,7 @@
         @media (min-width: 1000px) {
             order: 0;
             margin-block: 0;
+            margin-inline-start: 5vw;
         }
     }
 
@@ -35,8 +38,9 @@
         text-align: center;
 
         @media (min-width: 1000px) {
-            flex-basis: auto;
-            line-height: .8;
+            flex-basis: 40%;
+            line-height: .45;
+            text-align: start;
         }
     }
 
@@ -51,8 +55,9 @@
         padding-block: 2rem;
 
         @media (min-width: 1000px) {
-            flex-basis: auto;
+            flex-basis: 50%;
             padding-block: 0;
+            line-height: .45;
         }
     }
 
@@ -60,9 +65,11 @@
         color: black;
         padding: .1em .5em;
 
-        &:hover,
-        &:focus {
-            background-color: var.$accent-300;
+        @media (hover) {
+            &:hover,
+            &:focus {
+                background-color: var.$accent-300;
+            }
         }
     }
 
