--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -1,24 +1,76 @@
 @use '../base/typography' as type;
+@use '../utilities/variables' as var;
 @use '../components/big-arrow';
 
 .about {
-    margin-block-start: 8rem;
+    margin-block-start: 15rem;
     display: grid;
     place-items: center;
 
+    @media (min-width: 1100px) {
+        grid-template-columns: 8fr 1fr 8fr;
+        grid-template-rows: 1fr 3fr 1fr;
+        place-items: flex-start;
+    }
+
+    &__title {
+        position: relative;
+
+        @media (min-width: 1100px) {
+            grid-row: 1;
+            grid-column-start: 3;
+            align-self: flex-end;
+        }
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            width: 102%;
+            height: 80%;
+            transform: translateX(-1%);
+            background-color: var.$accent-400;
+            z-index: -1;
+        }
+    }
+
     &__image {
         max-width: 100%;
+
+        @media (min-width: 1100px) {
+            grid-area: 2 / 1;
+            justify-self: center;
+        }
+    }
+
+    &__line {
+        @media (min-width: 1100px) {
+            grid-area: 3 / 1;
+        }
     }
 
     &__tidbit {
         padding-block: 1rem 2rem;
+
+        @media (min-width: 1100px) {
+            grid-area: 2 / 3;
+            
+            padding: 0;
+        }
     }
 
     &__container {
         margin-inline: 1rem;
 
+        @media (min-width: 1100px) {
+            grid-area: 2 / 3;
+            align-self: flex-end;
+            margin-inline: 0 2rem;
+        }
+
         &--para {
             margin-block-end: 1rem;
+            max-width: 63ch;
         }
     }
 }
