--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -1,5 +1,6 @@
 @use '../utilities/variables' as *;
 @use '../base/typography' as type;
+@use '../utilities/mixins' as mixin;
 
 .projects {
     display: grid;
@@ -26,7 +27,6 @@
 }
 
 .project {
-
     &__image-cont {
         position: relative;
         text-align: center;
@@ -44,16 +44,6 @@
             inset-inline-start: 0;
             background-color: $main-200;
             z-index: 0;
-
-            &.right {
-                border-top-left-radius: 200px;
-                border-bottom-left-radius: 200px;
-            }
-
-            &.left {
-                border-top-right-radius: 200px;
-                border-bottom-right-radius: 200px;
-            }
         }
 
         &--image {
@@ -64,38 +54,10 @@
     &__words-cont {
         margin-inline: 1rem;
 
-        &.right {
-            text-align: end;
-
-            @media (min-width: 1000px) {
-                grid-column: 1;
-                grid-row: 1;
-            }
-        }
-
-        &.left {
-            text-align: start;
-
-            @media (min-width: 1000px) {
-                grid-column: 2;
-                grid-row: 1;
-            }
-        }
-
-        &--title {
-            @media (min-width: 1000px) {
-                margin-inline-end: -4rem;
-            }
-        }
-
-
         &--environment {
             font-size: type.$font-size-400;
             margin-block-end: 1.5rem;
 
-            @media (min-width: 1000px) {
-                margin-inline-end: -2rem;
-            }
         }
 
         &--description {
@@ -105,22 +67,13 @@
             margin-inline-start: auto;
         }
 
-        &--link {
+        &--first-link,
+        &--second-link {
             display: block;
             text-transform: uppercase;
             font-size: type.$font-size-300;
 
-            &:last-child {
-                @media (min-width: 1000px) {
-                    margin-inline-end: -4rem;
-                }
-            }
-
-            @media (min-width: 1000px) {
-                margin-inline-end: -2rem;
-            }
         }
-
         
     }
 
@@ -131,3 +84,51 @@
         align-items: center;
     }
 }
+
+@each $section, $offset in mixin.$wordSpacing {
+    .project.right {
+        .project__image-cont--platter {
+            border-top-left-radius: 200px;
+            border-bottom-left-radius: 200px;
+        }
+
+        .project__words-cont {
+            text-align: end;
+
+            @media (min-width: 1000px) {
+                grid-column: 1;
+                grid-row: 1;
+            }
+
+            &--#{$section} {
+                @media (min-width: 1000px) {
+                    margin-inline-end: $offset;
+                }
+            }
+        }
+    }
+
+    .project.left {
+        .project__image-cont--platter {
+            border-top-right-radius: 200px;
+            border-bottom-right-radius: 200px;
+        }
+
+        .project__words-cont {
+            text-align: start;
+
+            @media (min-width: 1000px) {
+                grid-column: 2;
+                grid-row: 1;
+            }
+            
+            &--#{$section} {
+                @media (min-width: 1000px) {
+                    margin-inline-start: $offset;
+                }
+            }
+        }
+    }
+}
+
+
