--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -34,7 +34,8 @@ h2 {
 
 h3 {
     font-size: $font-size-500;
-    font-weight: 300;
+    font-weight: 600;
+    letter-spacing: .04em;
 }
 
 .nav__item {
