--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -28,7 +28,9 @@
 
     @for $i from 1 through 4 {
         .project:nth-child(#{$i}) {
-            transition: transform 1s ease-in-out .5 * ($i - 1) * 1s, opacity 1s ease-in .5 * ($i - 1) * 1s;
+            @media (prefers-reduced-motion: no-preference) {
+                transition: transform 1s ease-in-out .5 * ($i - 1) * 1s, opacity 1s ease-in .5 * ($i - 1) * 1s;
+            }
         }
     }
 
@@ -100,7 +102,6 @@
             display: block;
             text-transform: uppercase;
             font-size: type.$font-size-300;
-
         }
         
     }
