--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -27,9 +27,9 @@
     }
 
     @for $i from 1 through 4 {
-        .project:nth-child(#{$i}) {
+        .project:nth-child(#{$i+1}) {
             @media (prefers-reduced-motion: no-preference) {
-                transition: transform 1s ease-in-out .5 * ($i - 1) * 1s, opacity 1s ease-in .5 * ($i - 1) * 1s;
+                transition: transform 1s var(--ease-in-out-1) 1 * ($i - 1) * 1s, opacity 1s var(--ease-in-out-1) 1 * ($i - 1) * 1s;
             }
         }
     }
