Fix instersection observer animation

--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -29,34 +29,36 @@
     @for $i from 1 through 4 {
         .project:nth-child(#{$i+1}) {
             @media (prefers-reduced-motion: no-preference) {
-                transition: transform 1s var(--ease-in-out-1) 1 * ($i - 1) * 1s, opacity 1s var(--ease-in-out-1) 1 * ($i - 1) * 1s;
+                transition: transform 600ms var(--ease-in-out-1), opacity 600ms var(--ease-in-out-1);
             }
         }
     }
 
     .project.right {
-        opacity: 0;
         transform: translateX(100%);
-    }
 
-    &.in-view .project.right {
-        opacity: 1;
-        transform: translateX(0px);
+        &.in-view {
+            opacity: 1;
+            transform: translateX(0px);
+        }
     }
 
     .project.left {
-        opacity: 0;
         transform: translateX(-100%);
+        
+        &.in-view {
+            opacity: 1;
+            transform: translateX(0px);
+        }
     }
-
-    &.in-view .project.left {
-        opacity: 1;
-        transform: translateX(0px);
-    }
+    
+    
 }
+
 
 .project {
     margin-block: 3em;
+    opacity: 0;
 
     &__image-cont {
         position: relative;
@@ -116,6 +118,7 @@
 
 @each $section, $offset in mixin.$wordSpacing {
     .project.right {
+
         .project__image-cont--platter {
             border-top-left-radius: 200px;
             border-bottom-left-radius: 200px;
@@ -167,5 +170,7 @@
         }
     }
 }
+
+
 
 
