--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -30,7 +30,7 @@
         transform: translateX(10px);
 
         &.in-view {
-            animation: enter-from-right 1s ease-in-out normal forwards;
+            animation: enter-from-right 1s var(--ease-in-out-3) normal forwards;
         }
     }
 
@@ -38,7 +38,7 @@
         transform: translateX(-10px);
         
         &.in-view {
-            animation: enter-from-left 1s ease-in-out normal forwards;
+            animation: enter-from-left 1s var(--ease-in-out-1) normal forwards;
         }
     }
 
@@ -52,7 +52,7 @@
         }
         70% {
             opacity: 1;
-            transform: translateY(2px) skewX(-.5deg);
+            transform: translateY(2px) skewX(.5deg);
         }
         100% {
             opacity: 1;
