--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "Khula";
-  src: url('../fonts/Khula\ Light\ 300.ttf') format('truetype'),
-    url('../fonts/Khula\ Regular\ 400.ttf') format('truetype'),
-    url('../fonts/Khula\ SemiBold\ 600.ttf') format('truetype'),
-    url('../fonts/Khula\ Bold\ 700.ttf') format('truetype'),
-    url('../fonts/Khula\ ExtraBold\ 800.ttf') format('truetype');
+  src: url('../src/fonts/Khula\ Light\ 300.ttf') format('truetype'),
+    url('../src/fonts/Khula\ Regular\ 400.ttf') format('truetype'),
+    url('../src/fonts/Khula\ SemiBold\ 600.ttf') format('truetype'),
+    url('../src/fonts/Khula\ Bold\ 700.ttf') format('truetype'),
+    url('../src/fonts/Khula\ ExtraBold\ 800.ttf') format('truetype');
   font-weight: 300 400 600 700 800;
 }
 
