--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ a:hover {
 /* accent color */
 @font-face {
   font-family: "Khula";
-  src: url("src/fonts/Khula Light 300.ttf") format("truetype"), url("src/fonts/Khula Regular 400.ttf") format("truetype"), url("src/fonts/Khula SemiBold 600.ttf") format("truetype"), url("src/fonts/Khula Bold 700.ttf") format("truetype"), url("src/fonts/Khula ExtraBold 800.ttf") format("truetype");
+  src: url("../src/fonts/Khula Light 300.ttf") format("truetype"), url("../src/fonts/Khula Regular 400.ttf") format("truetype"), url("../src/fonts/Khula SemiBold 600.ttf") format("truetype"), url("../src/fonts/Khula Bold 700.ttf") format("truetype"), url("../src/fonts/Khula ExtraBold 800.ttf") format("truetype");
   font-weight: 300 400 600 700 800;
 }
 /* font sizing */
