Start editing content

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,7 @@
 @use './base/reset';
 @use './utilities/variables' as var;
 @use './base/typography' as type;
+@use './layout/body';
 @use './layout/header';
 @use './layout/about';
 @use './layout/projects';
-
-body {
-    background-color: var.$main-100;
-    font-family: type.$font;
-    overflow-x: hidden;
-}
