--- a/css/main.css
+++ b/css/main.css
@@ -8,19 +8,16 @@
 html {
   scroll-behavior: smooth;
 }
+@media (prefers-reduced-motion) {
+  html {
+    scroll-behavior: auto;
+  }
+}
 
 ul {
   list-style: none;
   -webkit-padding-start: 0;
           padding-inline-start: 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
 }
 
 :where(html) {
@@ -100,6 +97,75 @@ p {
   font-weight: 400;
 }
 
+@property --offset {
+  syntax: "<length>";
+  inherits: false;
+  initial-value: 2px;
+}
+a {
+  color: inherit;
+  -webkit-text-decoration-style: underline;
+          text-decoration-style: underline;
+  text-decoration-thickness: 0.15em;
+  -webkit-text-decoration-color: hsl(32deg, 100%, 66%);
+          text-decoration-color: hsl(32deg, 100%, 66%);
+  text-underline-offset: var(--offset, 0.2em);
+  transition: --offset 300ms, text-decoration-color 300ms;
+}
+@supports not (background: paint(something)) {
+  a {
+    transition: text-underline-offset 300ms, -webkit-text-decoration-color 300ms;
+    transition: text-decoration-color 300ms, text-underline-offset 300ms;
+    transition: text-decoration-color 300ms, text-underline-offset 300ms, -webkit-text-decoration-color 300ms;
+  }
+}
+a:hover {
+  --offset: 0.4em;
+  -webkit-text-decoration-color: hsl(33deg, 100%, 96%);
+          text-decoration-color: hsl(33deg, 100%, 96%);
+  color: black;
+}
+@supports not (background: paint(something)) {
+  a:hover {
+    text-underline-offset: 0.4em;
+  }
+}
+
+a[class] {
+  text-decoration: none;
+  position: relative;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+a[class]::after {
+  content: "";
+  width: 100%;
+  height: 1.3em;
+  display: block;
+  position: absolute;
+  inset-inline-start: 0;
+  inset-block-start: 0;
+  z-index: -1;
+  -webkit-clip-path: inset(0 100% 0 0);
+          clip-path: inset(0 100% 0 0);
+  background-color: hsl(32deg, 100%, 76%);
+  transition: -webkit-clip-path 300ms ease;
+  transition: clip-path 300ms ease;
+  transition: clip-path 300ms ease, -webkit-clip-path 300ms ease;
+}
+a[class]:hover::after {
+  -webkit-clip-path: inset(0 0 0 0);
+          clip-path: inset(0 0 0 0);
+}
+
+body {
+  color: #313131;
+  background-color: hsl(233deg, 17%, 90%);
+  font-family: "Khula", sans-serif;
+  overflow-x: hidden;
+}
+
 .nav {
   width: 100%;
   height: auto;
@@ -152,16 +218,6 @@ p {
   .nav__menu {
     flex-basis: 50%;
     padding-block: 0;
-    line-height: 0.45;
-  }
-}
-.nav__link {
-  color: black;
-  padding: 0.1em 0.5em;
-}
-@media (hover) {
-  .nav__link:hover, .nav__link:focus {
-    background-color: hsl(32deg, 100%, 76%);
   }
 }
 
@@ -301,6 +357,7 @@ p {
   z-index: -1;
 }
 .about__image {
+  filter: drop-shadow(3px 5px 7px rgba(0, 0, 0, 0.4));
   max-width: 100%;
 }
 @media (min-width: 1100px) {
@@ -456,6 +513,7 @@ p {
   text-align: center;
   -webkit-margin-after: 3rem;
           margin-block-end: 3rem;
+  z-index: -1;
 }
 @media (min-width: 1000px) {
   .project__image-cont {
@@ -474,6 +532,10 @@ p {
 }
 .project__image-cont--image {
   position: relative;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+  border-radius: 0.5em;
+  max-width: 100%;
+  margin-inline: 0.5em;
 }
 .project__words-cont {
   margin-inline: 1rem;
@@ -491,6 +553,9 @@ p {
 }
 .project__words-cont--first-link, .project__words-cont--second-link {
   display: block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   text-transform: uppercase;
   font-size: clamp(24px, 3vw, 28px);
 }
@@ -520,6 +585,8 @@ p {
   .project.right .project__words-cont--title {
     -webkit-margin-end: -4rem;
             margin-inline-end: -4rem;
+    -webkit-margin-start: auto;
+            margin-inline-start: auto;
   }
 }
 .project.right .project__words-cont--description {
@@ -568,6 +635,8 @@ p {
   .project.right .project__words-cont--environment {
     -webkit-margin-end: -2rem;
             margin-inline-end: -2rem;
+    -webkit-margin-start: auto;
+            margin-inline-start: auto;
   }
 }
 .project.right .project__words-cont--description {
@@ -616,6 +685,8 @@ p {
   .project.right .project__words-cont--description {
     -webkit-margin-end: 0;
             margin-inline-end: 0;
+    -webkit-margin-start: auto;
+            margin-inline-start: auto;
   }
 }
 .project.right .project__words-cont--description {
@@ -664,6 +735,8 @@ p {
   .project.right .project__words-cont--first-link {
     -webkit-margin-end: -2rem;
             margin-inline-end: -2rem;
+    -webkit-margin-start: auto;
+            margin-inline-start: auto;
   }
 }
 .project.right .project__words-cont--description {
@@ -712,6 +785,8 @@ p {
   .project.right .project__words-cont--second-link {
     -webkit-margin-end: -4rem;
             margin-inline-end: -4rem;
+    -webkit-margin-start: auto;
+            margin-inline-start: auto;
   }
 }
 .project.right .project__words-cont--description {
@@ -741,10 +816,4 @@ p {
 .project.left .project__words-cont--description {
   -webkit-margin-end: auto;
           margin-inline-end: auto;
-}
-
-body {
-  background-color: hsl(233deg, 17%, 90%);
-  font-family: "Khula", sans-serif;
-  overflow-x: hidden;
 }/*# sourceMappingURL=main.css.map */
