--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -7,19 +7,15 @@
 
 html {
   scroll-behavior: smooth;
+
+  @media (prefers-reduced-motion) {
+    scroll-behavior: auto;
+  }
 }
 
 ul {
   list-style: none;
   padding-inline-start: 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
 }
 
 //open-props easings
