--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -96,6 +96,7 @@
     position: relative;
     text-align: center;
     margin-block-end: 3rem;
+    z-index: -1;
 
     @media (min-width: 1000px) {
       margin-block-end: 0;
@@ -113,6 +114,10 @@
 
     &--image {
       position: relative;
+      box-shadow: 1px 1px 10px rgba(0, 0, 0, .3);
+      border-radius: .5em;
+      max-width: 100%;
+      margin-inline: .5em;
     }
   }
 
@@ -134,6 +139,7 @@
     &--first-link,
     &--second-link {
       display: block;
+      width: fit-content;
       text-transform: uppercase;
       font-size: type.$font-size-300;
     }
@@ -168,6 +174,7 @@ $offset in mixin.$wordSpacing {
       &--#{$section} {
         @media (min-width: 1000px) {
           margin-inline-end: $offset;
+          margin-inline-start: auto;
         }
       }
 
