--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -48,9 +48,9 @@
 		flex: 0 1 100%;
 		order: 2;
 
-
 		display: flex;
 		justify-content: space-around;
+		flex-wrap: wrap;
 
 		padding-block: 2rem;
 
