--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -44,7 +44,19 @@ h3 {
   letter-spacing: 0.215em;
 }
 
-p {
+body {
   font-size: $font-size-100;
   font-weight: 400;
+  line-height: 1.5;
+}
+
+label {
+  font-size: $font-size-200;
+}
+
+input,
+textarea {
+  font-size: 16px;
+  font-size: max(16px, 1em);
+  line-height: 1.5;
 }
