--- a/src/scss/components/_links.scss
+++ b/src/scss/components/_links.scss
@@ -12,10 +12,10 @@ a {
   text-decoration-thickness: .15em;
   text-decoration-color: var.$accent-400;
   text-underline-offset: var(--offset, .2em);
-  transition: --offset 300ms, text-decoration-color 300ms;
+  transition: --offset 300ms, text-decoration-color 300ms, box-shadow 300ms;
 
   @supports not (background: paint(something)) {
-    transition: text-decoration-color 300ms, text-underline-offset 300ms;
+    transition: text-decoration-color 300ms, text-underline-offset 300ms, box-shadow 300ms;
   }
 
   &:hover {
@@ -26,6 +26,11 @@ a {
     @supports not (background: paint(something)) {
       text-underline-offset: 0.4em;
     }
+  }
+
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 0 3px black;
   }
 }
 
