--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -3,17 +3,14 @@
 
 .nav {
 	width: 100%;
-	height: auto;
+	height: 200px;
 
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	align-items: flex-end;
-
-	margin-block: 1rem;
+	align-items: center;
 
 	@media (min-width: 1000px) {
-		height: 80px;
 		justify-content: space-between;
 		flex-wrap: nowrap;
 	}
@@ -22,24 +19,22 @@
 		max-width: 60px;
 		max-height: 50px;
 		order: 1;
-
-		margin-block: 1rem;
+		margin-block: .5em;
 
 		@media (min-width: 1000px) {
 			order: 0;
-			margin-block: 0;
-			margin-inline-start: 5vw;
+			margin-inline-start: 2em;
 		}
 	}
 
 	&__name {
 		flex: 0 1 100%;
-
+		line-height: 1;
 		text-align: center;
+		margin-block: .5em;
 
 		@media (min-width: 1000px) {
 			flex-basis: 40%;
-			line-height: .45;
 			text-align: start;
 		}
 	}
@@ -47,16 +42,27 @@
 	&__menu {
 		flex: 0 1 100%;
 		order: 2;
-
+		margin-block: .5em;
 		display: flex;
 		justify-content: space-around;
 		flex-wrap: wrap;
-
-		padding-block: 2rem;
 
 		@media (min-width: 1000px) {
 			flex-basis: 50%;
 			padding-block: 0;
 		}
+
+	}
+
+	&__item {
+		margin-block-end: .5em;
+
+		@media (min-width: 1000px) {
+			margin: 0;
+		}
+	}
+
+	&__link {
+		padding: 0em .75em;
 	}
 }
