--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -1,9 +1,7 @@
-@use '../base/typography' as type;
-@use '../utilities/variables' as var;
-@use '../components/big-arrow';
+@use '../utilities/variables' as *;
 
 .about {
-  margin-block-start: 15rem;
+  margin-block-start: 5rem;
   display: grid;
   place-items: center;
 
@@ -15,6 +13,7 @@
 
   &__title {
     position: relative;
+    margin-block-end: .5em;
 
     @media (min-width: 1100px) {
       grid-row: 1;
@@ -29,7 +28,7 @@
       width: 102%;
       height: 80%;
       transform: translateX(-1%);
-      background-color: var.$accent-400;
+      background-color: $accent-400;
       z-index: -1;
     }
   }
@@ -38,10 +37,8 @@
     filter: drop-shadow(3px 5px 7px rgba(0, 0, 0, .4));
     max-width: 100%;
 
-
     @media (min-width: 1100px) {
       grid-area: 2 / 1;
-      justify-self: center;
     }
   }
 
@@ -51,28 +48,27 @@
     }
   }
 
-  &__tidbit {
-    padding-block: 1rem 2rem;
-
-    @media (min-width: 1100px) {
-      grid-area: 2 / 3;
-
-      padding: 0;
-    }
-  }
-
   &__container {
-    margin-inline: 1rem;
+    display: grid;
+    padding-inline: .5em;
 
     @media (min-width: 1100px) {
       grid-area: 2 / 3;
-      align-self: flex-end;
-      margin-inline: 0 2rem;
+      padding-inline: 0;
+    }
+
+    &--tidbit {
+      text-align: center;
+      font-size: $step-2;
+
+      @media (min-width: 1100px) {
+        text-align: start;
+      }
     }
 
     &--para {
-      margin-block-end: 1rem;
-      max-width: 63ch;
+      max-width: 65ch;
+      margin-block-start: $space-2xs;
     }
   }
 }
