--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -1,4 +1,3 @@
-
 /* main color */
 $main-400: hsl(235, 17%, 60%);
 $main-300: hsl(233, 17%, 72%);
@@ -10,3 +9,60 @@ $accent-400: hsl(32, 100%, 66%);
 $accent-300: hsl(32, 100%, 76%);
 $accent-200: hsl(32, 100%, 86%);
 $accent-100: hsl(33, 100%, 96%);
+
+/* spacing */
+$space-3xs: clamp(.25rem, calc(.23rem + .1vw), .31rem);
+$space-2xs: clamp(.5rem, calc(.46rem + .19vw), .63rem);
+$space-xs: clamp(.75rem, calc(.69rem + .29vw), .94rem);
+$space-s: clamp(1rem, calc(.92rem + .39vw), 1.25rem);
+$space-m: clamp(2rem, calc(1.84rem + .78vw), 2.5rem);
+$space-l: clamp(3rem, calc(2.77rem + 1.17vw), 3.75rem);
+$space-xl: clamp(5rem, calc(4.61rem + 1.94vw), 6.25rem);
+$space-2xl: clamp(8rem, calc(7.38rem + 3.11vw), 10rem);
+$space-3xl: clamp(13rem, calc(11.99rem + 5.05vw), 16.25rem);
+
+/* font sizing */
+$step--1: clamp(.83rem, calc(.82rem + .08vw), .88rem);
+$step-0: clamp(1rem, calc(.92rem + .39vw), 1.25rem);
+$step-1: clamp(1.2rem, calc(1.02rem + .88vw), 1.77rem);
+$step-2: clamp(1.44rem, calc(1.11rem + 1.65vw), 2.5rem);
+$step-3: clamp(1.73rem, calc(1.17rem + 2.8vw), 3.53rem);
+$step-4: clamp(2.07rem, calc(1.17rem + 4.54vw), 5rem);
+$step-5: clamp(5rem, calc(6rem + 6vw), 20rem);
+
+//open-props easings$
+$ease-1: cubic-bezier(.25, 0, .5, 1);
+$ease-2: cubic-bezier(.25, 0, .4, 1);
+$ease-3: cubic-bezier(.25, 0, .3, 1);
+$ease-4: cubic-bezier(.25, 0, .2, 1);
+$ease-5: cubic-bezier(.25, 0, .1, 1);
+$ease-in-1: cubic-bezier(.25, 0, 1, 1);
+$ease-in-2: cubic-bezier(.50, 0, 1, 1);
+$ease-in-3: cubic-bezier(.70, 0, 1, 1);
+$ease-in-4: cubic-bezier(.90, 0, 1, 1);
+$ease-in-5: cubic-bezier(1, 0, 1, 1);
+$ease-out-1: cubic-bezier(0, 0, .75, 1);
+$ease-out-2: cubic-bezier(0, 0, .50, 1);
+$ease-out-3: cubic-bezier(0, 0, .3, 1);
+$ease-out-4: cubic-bezier(0, 0, .1, 1);
+$ease-out-5: cubic-bezier(0, 0, 0, 1);
+$ease-in-out-1: cubic-bezier(.1, 0, .9, 1);
+$ease-in-out-2: cubic-bezier(.3, 0, .7, 1);
+$ease-in-out-3: cubic-bezier(.5, 0, .5, 1);
+$ease-in-out-4: cubic-bezier(.7, 0, .3, 1);
+$ease-in-out-5: cubic-bezier(.9, 0, .1, 1);
+$ease-elastic-1: cubic-bezier(.5, .75, .75, 1.25);
+$ease-elastic-2: cubic-bezier(.5, 1, .75, 1.25);
+$ease-elastic-3: cubic-bezier(.5, 1.25, .75, 1.25);
+$ease-elastic-4: cubic-bezier(.5, 1.5, .75, 1.25);
+$ease-elastic-5: cubic-bezier(.5, 1.75, .75, 1.25);
+$ease-squish-1: cubic-bezier(.5, -.1, .1, 1.5);
+$ease-squish-2: cubic-bezier(.5, -.3, .1, 1.5);
+$ease-squish-3: cubic-bezier(.5, -.5, .1, 1.5);
+$ease-squish-4: cubic-bezier(.5, -.7, .1, 1.5);
+$ease-squish-5: cubic-bezier(.5, -.9, .1, 1.5);
+$ease-step-1: steps(2);
+$ease-step-2: steps(3);
+$ease-step-3: steps(4);
+$ease-step-4: steps(7);
+$ease-step-5: steps(10);
